--- a/proyecto_reciclaje/reciclaje/templates/usuario_regular/catalogo.html
+++ b/proyecto_reciclaje/reciclaje/templates/usuario_regular/catalogo.html
@@ -11,7 +11,7 @@
 
 <body class="dashboard-body">
 <header class="dashboard-header">
-    <h1 class="titulo">Bienvenido, {{ nombre_usuario }}</h1>
+    <h1 class="titulo">Catalogo Recompensas</h1>
     <nav>
         <a href="{% url 'dashboard' %}">Dashboard</a>
         <a href="{% url 'registro_reciclaje' %}">Registrar Reciclaje</a>
